[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/gear_gray.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gear.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/MainMenu/SettingsBtn.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 3 )

[node name="SettingsBtn" type="TextureButton"]
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
script = ExtResource( 4 )

[node name="SettingsMenu" type="PopupMenu" parent="."]
visible = true
margin_left = 30.0
margin_top = 70.0
margin_right = 398.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 1 )

[node name="MainMenuBtn" type="Button" parent="SettingsMenu"]
margin_left = 5.0
margin_top = 7.0
margin_right = 365.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Return To Main Menu"

[node name="ToggleRecoil" type="Button" parent="SettingsMenu"]
margin_left = 5.0
margin_top = 80.0
margin_right = 365.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 3 )
text = "Toggle Recoil"

[node name="ExitApp" type="Button" parent="SettingsMenu"]
margin_left = 5.0
margin_top = 160.0
margin_right = 365.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 4 )
text = "Exit App"
[connection signal="pressed" from="." to="." method="_on_SettingsBtn_pressed" flags=3]
[connection signal="pressed" from="SettingsMenu/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed" flags=3]
[connection signal="pressed" from="SettingsMenu/ToggleRecoil" to="." method="_on_ToggleRecoil_pressed" flags=3]
[connection signal="pressed" from="SettingsMenu/ExitApp" to="." method="_on_ExitApp_pressed" flags=3]
